turtleart.disktwo.DiskTwo.scala.error
Erreur de compilation :
DiskTwo:19: error: not enough arguments for method changeColor: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    changeColor()
               ^